--- a/html/product.html
+++ b/html/product.html
@@ -39,7 +39,7 @@
         <section>
             <div class="container-fluid">
                 <div class="row text-center" id="product">
-                    <h4 class="display-4 text-dark bg-opacity-50 bg-gradient">PRODUCTS:</h4>
+                    <h4 class="display-4 bg-opacity-50">PRODUCTS:</h4>
                 </div>
                 <div class="row d-flex flex-wrap gap-4 justify-content-center my-3" id="prod">
                 </div>
