--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>SUPERLATIVE</title>
 </head>
 
-<body>
+<body id="landing-page">
     <header>
         <nav class="navbar navbar-expand-lg bg-transparent">
             <div class="container-fluid">
