--- a/html/product.html
+++ b/html/product.html
@@ -37,6 +37,51 @@
     </header>
     <main>
         <section>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <label class="text-light" for="productType">
+                            Product Type :
+                        </label>
+                        <select id="productType">
+                            <option value="Any">Any</option>
+                            <option value="T-shirt">T-shirts</option>
+                            <option value="Trousers">Trousers</option>
+                            <option value="Shorts">Shorts</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <label class="text-light" for="productColor">
+                            Color :
+                        </label>
+                        <select id="productType">
+                            <option value="Any">Any</option>
+                            <option value="Light Grey">Light Grey</option>
+                            <option value="Black">Black</option>
+                            <option value="Navy Blue">Navy Blue</option>
+                            <option value="Apricot">Apricot</option>
+                            <option value="Black and White">Black and White</option>
+                            <option value="Khaki">Khaki</option>
+                            <option value="Grey">Grey</option>
+                        </select>
+                    </div>
+                    <div class="col">
+                        <label class="text-light" for="productColor">
+                            Price Range :
+                        </label>
+                        <select id="productPrice">
+                            <option value="Any">Any</option>
+                            <option value="150less">Less Than R150</option>
+                            <option value="200less">Less Than R200</option>
+                            <option value="250less">Less Than R250</option>
+                            <option value="300less">Less Than R300</option>
+                            <option value="350less">Less Than R350</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
             <div class="container-fluid">
                 <div class="row text-center" id="product">
                     <h4 class="display-4 bg-opacity-50">PRODUCTS:</h4>
@@ -50,5 +95,9 @@
         &copy; 2022 SUPERLATIVE
     </footer>
     <script src="../js/code.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
