--- a/index.html
+++ b/index.html
@@ -41,10 +41,13 @@
             <h6 class="display-6 text-center text-light">a la mode</h6>
         </section>
     </main>
-    <footer class="text-center fixed-bottom">
+    <footer class="text-center fixed-bottom text-light">
         &copy; 2022 SUPERLATIVE
     </footer>
     <script src="./js/code.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
