--- a/html/product.html
+++ b/html/product.html
@@ -91,7 +91,7 @@
             </div>
         </section>
     </main>
-    <footer class="text-center">
+    <footer class="text-center text-light">
         &copy; 2022 SUPERLATIVE
     </footer>
     <script src="../js/code.js"></script>
